fix: dark mode style

--- a/src/modules/feedback/components/mapFeedback/mapFeedbackPanel.css
+++ b/src/modules/feedback/components/mapFeedback/mapFeedbackPanel.css
@@ -11,6 +11,9 @@
 	flex: 1;
 	position: relative;
 }
+.map-feedback__iframe iframe {
+	border: 0;
+}
 .map-feedback__iframe.userVisited iframe {
 	border-bottom: 5px solid var(--error-color);
 }
